--- a/style.css
+++ b/style.css
@@ -305,6 +305,23 @@ header .right {
   color: #249af2;
 }
 
+@media screen and (max-width: 700px) {
+  .navigation {
+    padding-top: 90px;
+  }
+  .navigation a + a::before {
+    height: 7px;
+    width: 10px;
+    margin-left: 10px;
+    margin-right: 10px;
+    transform: rotate(-90deg) translate(1px, 1px);
+  }
+}
+@media screen and (max-width: 400px) {
+  .navigation {
+    display: none;
+  }
+}
 .container {
   display: flex;
   flex-wrap: wrap;
@@ -465,6 +482,9 @@ header .right {
   }
 }
 @media screen and (max-width: 400px) {
+  .container #vehicle {
+    margin-top: 100px;
+  }
   .container #vehicle > div + div {
     padding: 10px 0;
   }
